# scripts

./: README.md  filenumberer.py  imagerename.py  imagesort.py  install.sh  nm-menu.sh  pyproject.toml  pyprojet.toml  rename.py  requirements.txt  rmmeta.py  system-cleaner.py  video2frames.py
dev-scripts/: scan-scripts.py
filescript/: addprefix.py  imagerename.py
mytools/filescript/: addprefix.py  dateprefixsort.py  filenumberer.py  imagerename.py  rename.py  video2frames.py
mytools/grafics/: confettigen.py
mytools/other/: easter.py
mytools/pdfscripts/: pdf2img.py  pdfmerge.py  pdfocr.py  pdfpagemove.py  pdfresize2A4.py  pdfrmmeta.py
mytools/resources/: argparser.py
mytools/scientific/: truth_table.py
other/: easter.py
pdfocrpipeline/: document_types.json  ocrpipline.sh  pdfkeywords.py  pdfocr.py
pdfscripts/: pdf2img.py  pdfmerge.py  pdfrmmeta.py  pdfrotate180.sh
rofi-scripts/: nm-menu.sh  roficalc.sh  search.sh  ssh-menu.sh
scientific/: truth-table.py
