[build-system]
requires = [ "setuptools>=64",]
build-backend = "setuptools.build_meta"

[project]
name = "mytools"
description = "A personal collection of useful tools for file management, pdfs, scientific things and more."
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [ "PyMuPDF", "pdf2image", "Pillow", "PyPDF2", "opencv-python", "toml",]

[project.scripts]
easter = "mytools.other.easter:main"
pdf2img = "mytools.pdfscripts.pdf2img:main"
pdfmerge = "mytools.pdfscripts.pdfmerge:main"
pdfocr = "mytools.pdfscripts.pdfocr:main"
pdfpagemove = "mytools.pdfscripts.pdfpagemove:main"
pdfrmmeta = "mytools.pdfscripts.pdfrmmeta:main"
pdfresize2A4 = "mytools.pdfscripts.pdfresize2A4:main"
addprefix = "mytools.filescript.addprefix:main"
dateprefixsort = "mytools.filescript.dateprefixsort:main"
filenumberer = "mytools.filescript.filenumberer:main"
imagerename = "mytools.filescript.imagerename:main"
rename = "mytools.filescript.rename:main"
video2frames = "mytools.filescript.video2frames:main"
confettigen = "mytools.grafics.confettigen:main"
truth-table = "mytools.scientific.truth_table:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = [ ".",]
